<resources>
    <string name="app_name">OpenKudosAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_email">   Email</string>
    <string name="string_password">Password</string>
    <string name="string_forgot_password">Forgot password</string>
    <string name="string_different">Kudos. Think different</string>
    <string name="string_remember_me">Remember me</string>
    <string name="string_log_in">Log in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="string_confirm_password">Confirm password</string>
    <string name="string_register">Register</string>
    <string name="string_logout">Logout</string>
    <string name="string_kudos">Kudos:</string>
    <string name="string_following">Following:</string>
    <string name="string_endorsements">Endorsements:</string>
    <string name="string_challenges">Challenges:</string>
    <string name="string_give_kudos_by_email">Give Kudos by email</string>
    <string name="string_hint_type_email">Here...</string>
    <string name="string_give">Give!</string>
    <string name="string_amount">Amount ...</string>
    <string name="string_give_kudos_message_hint">Explain, why do you give Kudos</string>
    <string name="string_participant_email_label">Please enter the email of friend that you want to challenge</string>
    <string name="string_referee_email_label">Please enter the email of friend that you want to be the referee of challenge</string>
    <string name="string_name_label">Please enter challenge name</string>
    <string name="string_kudos_label">Please enter the amount of kudos that you want to be as a stake of challenge</string>
    <string name="string_challenge_name_hint">Name of challenge goes here...</string>
    <string name="string_challenge_description">Here you can challenge your friends.</string>
    <string name="string_challenge_button_label">Challenge!</string>
    <string name="string_pick_from_list">Or pick from list</string>
    <string name="string_select_date">Click SET DATE button to set the time until the challenge must be completed</string>
    <string name="string_set_date">SET DATE</string>
    <string-array name="challenge_name_suggestions">
        <item>Or pick from list</item>
        <item>Finish project on time</item>
        <item>Win football</item>
        <item>To work by bike</item>
        <item>Learn new programming language</item>
    </string-array>
    <string-array name="kudos_amount_suggestions">
        <item>Or pick from list</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string name="title_activity_time_picking">TimePickingActivity</string>
    <string name="title_activity_kudos_information">KudosInformationActivity</string>

</resources>
