<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="textEmailAddress"
            android:ems="3"
            android:hint="@string/string_email"
            android:id="@+id/login_email_input"
            android:background="@drawable/shapes"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="36dp"
            android:padding="5sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="textPassword"
            android:ems="3"
            android:padding="5sp"
            android:background="@drawable/shapes"
            android:id="@+id/login_password_input"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:hint="@string/string_password"
            android:layout_below="@+id/login_email_input"
            android:layout_marginTop="20sp"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_remember_me"
            android:layout_marginLeft="18sp"
            android:textColor="#7F7F7F"
            android:id="@+id/remember_me_flag"
            android:layout_below="@+id/login_password_input"
            android:layout_alignParentStart="true"
            android:layout_marginTop="39sp"/>
    <TextView
            android:layout_width="250sp"
            android:layout_height="30sp"
            android:text="@string/string_forgot_password"
            android:clickable="true"
            android:textColor="#7F7F7F"
            android:maxLines="1"
            android:layout_marginTop="180sp"
            android:layout_marginLeft="250sp"
            android:id="@+id/forgot_password_button"/>
    <Button
            android:layout_width="120sp"
            android:layout_height="40sp"
            android:text="@string/string_log_in"
            android:background="#87a527"
            android:textColor="#ffffff"
            android:id="@+id/login_button"
            android:onClick="logIn"
            android:layout_marginTop="99dp"
            android:layout_below="@+id/forgot_password_button"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>