<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_challenge_description"
                        android:id="@+id/challenge_section_description"
                        android:layout_marginTop="100dp"
                        android:textSize="20sp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_participant_email_label"
                        android:id="@+id/participant_email_label"
                        android:layout_marginTop="20sp"
                        android:layout_centerVertical="true"
                        android:layout_below="@+id/challenge_section_description"/>
                <EditText
                        android:layout_width="200sp"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:hint="@string/string_hint_type_email"
                        android:textSize="16sp"
                        android:background="@drawable/shapes"
                        android:id="@+id/participant_email_input"
                        android:layout_below="@+id/participant_email_label"
                        android:layout_alignParentStart="true"/>
                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="40sp"
                        android:id="@+id/spinner_pick_participant"
                        android:layout_marginTop="-35sp"
                        android:layout_marginLeft="220sp" android:layout_gravity="right"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_referee_email_label"
                        android:id="@+id/referee_email_label"
                        android:layout_below="@+id/participant_email_input"
                        android:layout_marginTop="20sp"/>
                <EditText
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:textSize="16sp"
                        android:hint="@string/string_hint_type_email"
                        android:background="@drawable/shapes"
                        android:id="@+id/referee_email_input"
                        android:layout_below="@+id/referee_email_label"
                        android:layout_centerVertical="true"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="40sp"
                        android:id="@+id/spinner_pick_referee"
                        android:layout_marginTop="-35sp"
                        android:layout_below="@+id/referee_email_label"
                        android:gravity="right"
                        android:layout_marginLeft="220sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_name_label"
                        android:id="@+id/challenge_name_label"
                        android:layout_marginTop="20sp"
                        android:layout_below="@+id/referee_email_input"/>
                <EditText
                        android:layout_width="220sp"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/challenge_name_input"
                        android:layout_centerVertical="true"
                        android:hint="@string/string_hint_type_email"
                        android:background="@drawable/shapes"
                        android:layout_below="@+id/challenge_name_label"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="40sp"
                        android:id="@+id/spinner_pick_challenge_name"
                        android:textSize="10sp"
                        android:layout_marginTop="-35sp"
                        android:entries="@array/challenge_name_suggestions"
                        android:layout_below="@+id/challenge_name_label"
                        android:layout_marginLeft="220sp"/>


                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_kudos_label"
                        android:id="@+id/kudos_amount_label"
                        android:layout_marginTop="20sp"
                        android:layout_below="@+id/challenge_name_input"
                        android:layout_alignParentStart="true"/>
                <EditText
                        android:layout_width="220sp"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:ems="10"
                        android:textSize="16sp"
                        android:hint="@string/string_hint_type_email"
                        android:background="@drawable/shapes"
                        android:id="@+id/kudos_amount_input"
                        android:layout_below="@+id/kudos_amount_label"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="40sp"
                        android:text="@string/string_pick_from_list"
                        android:id="@+id/spinner_pick_kudos_amount"
                        android:layout_marginTop="-35sp"
                        android:textSize="10sp"
                        android:entries="@array/kudos_amount_suggestions"
                        android:layout_below="@+id/kudos_amount_label"
                        android:layout_marginLeft="220sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_select_date"
                        android:id="@+id/textView"/>
                <Button
                        android:layout_width="100sp"
                        android:layout_height="50sp"
                        android:layout_marginTop="-15sp"
                        android:text="@string/string_set_date"
                        android:id="@+id/button_set_date"
                        android:layout_gravity="right"/>

                <Button
                        android:layout_width="100sp"
                        android:id="@+id/button_set_time"
                        android:text="SET TIME"
                        android:layout_height="50sp"
                        android:layout_marginTop="-50sp"
                        android:layout_marginLeft="30sp"
                        android:layout_gravity="center_horizontal"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_challenge_button_label"
                        android:id="@+id/challenge_button"
                        android:layout_marginTop="27dp"
                        android:layout_below="@+id/spinner_pick_kudos_amount"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_horizontal"/>
        </LinearLayout>
</ScrollView>
