<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="open.kudos.activities.MainScreen">

    <include
            android:id="@+id/main_screen_tool_bar"
            layout="@layout/main_tool_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />

    <layout.SlidingTabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:background="@color/ColorPrimary"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_logout"
            android:id="@+id/logout_button"
            android:onClick="onButtonClick"
            android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"/>
    <FrameLayout
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:layout_alignParentStart="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            android:focusable="true"
            android:layout_below="@+id/main_screen_tool_bar"
            android:id="@+id/kudos_frame"
            android:background="@drawable/shapes">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/string_kudos"
                android:id="@+id/kudos_tag"
                android:layout_gravity="center_horizontal|top"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"
                android:clickable="false"
                android:textSize="20sp"
                android:id="@+id/kudos_amount"
                android:layout_gravity="bottom|center"/>
    </FrameLayout>

    <FrameLayout
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:layout_alignBottom="@+id/kudos_frame"
            android:background="@drawable/shapes"
            android:layout_toEndOf="@+id/kudos_frame"
            android:id="@+id/follower_frame">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_following"
                android:id="@+id/followers_tag"
                android:layout_gravity="center_horizontal|top"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"
                android:textSize="20sp"
                android:id="@+id/followers_amount"
                android:layout_gravity="bottom|center"/>
    </FrameLayout>

    <FrameLayout
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:background="@drawable/shapes"
            android:layout_below="@+id/main_screen_tool_bar"
            android:layout_toEndOf="@+id/follower_frame"
            android:id="@+id/endorsement_frame">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_endorsements"
                android:textSize="12sp"
                android:id="@+id/endorsements_tag"
                android:layout_gravity="center_horizontal|top"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"
                android:textSize="20sp"
                android:id="@+id/endorsements_amount"
                android:layout_gravity="bottom|center"/>
    </FrameLayout>
    <FrameLayout
            android:layout_width="80sp"
            android:layout_height="40sp"
            android:background="@drawable/shapes"
            android:layout_below="@+id/main_screen_tool_bar"
            android:layout_toEndOf="@+id/endorsement_frame"
            android:id="@+id/challenge_frame">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_challenges"
                android:id="@+id/challenges_tag"
                android:layout_gravity="center_horizontal|top"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"
                android:textSize="20sp"
                android:id="@+id/challenges_amount"
                android:layout_gravity="bottom|center"/>
    </FrameLayout>
    <Button
            android:layout_width="66sp"
            android:layout_height="40sp"
            android:layout_marginRight="0sp"
            android:id="@+id/settings_button"
            android:text="MOD"
            android:layout_below="@+id/main_screen_tool_bar"
            android:layout_alignEnd="@+id/logout_button" android:layout_toEndOf="@+id/challenge_frame">
    </Button>

    <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            ></android.support.v4.view.ViewPager>

</RelativeLayout>
